Fix overflow in the card  , edit index.html, css files

--- a/css/base.css
+++ b/css/base.css
@@ -4,6 +4,29 @@
   box-sizing: border-box;
 }
 
+:root{
+  --bg-dark-cyan: hsl(158, 36%, 37%);
+  
+  --bg-cream: hsl(30, 38%, 92%);
+  
+  --cl-very-dark-blue: hsl(212, 21%, 14%);
+  --cl-dark-grayish-blue: hsl(228, 12%, 48%);
+  --cl-white: hsl(0, 0%, 100%);
+  
+  --hover-cl: hsl(158, 36%, 17%);
+  
+  --ff-base: "Montserrat";
+  --ff-acc: "Fraunces", fantasy;
+  
+  --fz-base: 14px;
+
+  --fw-base: 500;
+  --fw-acc: 700;
+  
+  --sm: 375px;
+  --lg: 1440px;
+}
+
 html{
  font-size: 14px;
 }
